# AgentDatimus

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
conf/: agent.ini-sample  config.ini-sample
src/agentdatimus/: __init__.py  agentdatimus.py  weektimerangevalue.py
tests/: test_agentdatimus.py  test_weektimerangevalue.py
